--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*, *:before, *:after {
+    box-sizing: 0;
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+    display: block;
+    position: relative;
+    width: 100vm;
+    overflow-x: hidden;
+    font-size: 1vm;
+}
+
+#root {
+    background-color: #fff;
+    min-height: 100vh;
 }
